背景色を変更

--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,13 @@
         <ol>
           <div class="how-to-element-left">
             <li><p>Unityプロジェクトを閉じます</p></li>
+            <p class="how-to-index">.1</p>
           </div>
           <div class="how-to-element-right">
+            <p class="how-to-index">2.</p>
             <li>
               <p><a href="https://drive.google.com/drive/folders/1ycOZTqnDIRzXL43RSJt7tsebUc2Qip5-?usp=sharing">
-              Googleドライブ</a>にアクセスして<strong>Assetsフォルダ</strong>をダウンロードします。</p>
+              Googleドライブ</a>にアクセスして<br><strong>Assetsフォルダ</strong>をダウンロードします。</p>
               <div class="gdrive-screenshot">
                 <img alt="Assetsフォルダをダウンロードする画面のスクリーンショット"
                 src = "screenshots/how_to_download_0.png" />
@@ -39,8 +41,10 @@
               <span id="zip-filepath"></span>
               <button onclick="selectZipFile()" class="round-button">参照</button>
             </li>
+            <p class="how-to-index">.3</p>
           </div>
           <div class="how-to-element-right">
+            <p class="how-to-index">4.</p>
             <li>
               <p>Unityプロジェクトのフォルダ<small>(Assetフォルダがある階層)</small>を参照します</p>
               <div class="unity-screenshot">
@@ -57,6 +61,7 @@
               <p>実行ボタンでコピーを開始します</p>
               <button id="copy-button" onclick="executeCopy()" class="round-button">コピーを実行</button>
             </li>
+            <p class="how-to-index">.5</p>
           </div>
         </ol>
       </div>
