URLを動的に変更

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
           <div class="how-to-element-right">
             <p class="how-to-index">2.</p>
             <li>
-              <p><a href="https://drive.google.com/drive/folders/1ycOZTqnDIRzXL43RSJt7tsebUc2Qip5-?usp=sharing">
-              Googleドライブ</a>にアクセスして<br><strong>Assetsフォルダ</strong>をダウンロードします。</p>
+              <p><a href="#" id="google-drive-link">Googleドライブ</a>にアクセスして<br>
+                <strong>Assetsフォルダ</strong>をダウンロードします。</p>
               <div class="gdrive-screenshot">
                 <img alt="Assetsフォルダをダウンロードする画面のスクリーンショット"
                 src = "screenshots/how_to_download_0.png" />
