hoverアクションを追加

--- a/src/index.html
+++ b/src/index.html
@@ -1,71 +1,91 @@
 <!doctype html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>zip_to_unity</title>
-  </head>
 
-  <body>
-    <main>
-      <h1>Zip To Unity</h1>
-      <p id="app-description">
-       Assetsフォルダのあるzipファイルを解凍して<br>
-       UnityプロジェクトのAssetフォルダに展開します
-      </p>
-      <div class="how-to-background">
-        <h2>操作方法</h2>
-        <ol>
-          <div class="how-to-element-left">
-            <li><p>Unityプロジェクトを閉じます</p></li>
-            <p class="how-to-index">.1</p>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>zip_to_unity</title>
+</head>
+
+<body>
+  <main>
+    <h1>Zip To Unity</h1>
+    <p id="app-description">
+      Assetsフォルダのあるzipファイルを解凍して<br>
+      UnityプロジェクトのAssetフォルダに展開します
+    </p>
+    <h2>操作方法</h2>
+    <ol>
+      <div class="how-to-column">
+        <div class="how-to-element-left">
+          <div class="how-to-desc-left">
+            <li>
+              <p>Unityプロジェクトを閉じます</p>
+            </li>
           </div>
-          <div class="how-to-element-right">
-            <p class="how-to-index">2.</p>
+          <p class="how-to-index">.1</p>
+        </div>
+      </div>
+      <div class="how-to-column">
+        <div class="how-to-element-right">
+          <p class="how-to-index">2.</p>
+          <div class="how-to-desc-right">
             <li>
               <p><a href="#" id="google-drive-link">Googleドライブ</a>にアクセスして<br>
-                <strong>Assetsフォルダ</strong>をダウンロードします。</p>
+                <strong>Assetsフォルダ</strong>をダウンロードします。
+              </p>
               <div class="gdrive-screenshot">
-                <img alt="Assetsフォルダをダウンロードする画面のスクリーンショット"
-                src = "screenshots/how_to_download_0.png" />
-                <img alt="Assetsフォルダをダウンロードする画面のスクリーンショット"
-                src = "screenshots/how_to_download_1.png" />
+                <img alt="Assetsフォルダをダウンロードする画面のスクリーンショット" src="screenshots/how_to_download_0.png" />
+                <img alt="Assetsフォルダをダウンロードする画面のスクリーンショット" src="screenshots/how_to_download_1.png" />
               </div>
             </li>
           </div>
-          <div class="how-to-element-left">
+        </div>
+      </div>
+      <div class="how-to-column">
+        <div class="how-to-element-left">
+          <div class="how-to-desc-left">
             <li>
               <p>ダウンロードしたzipファイルを参照します</p>
               <label for="zip-filepath">zip:</label>
               <span id="zip-filepath"></span>
               <button onclick="selectZipFile()" class="round-button">参照</button>
             </li>
-            <p class="how-to-index">.3</p>
           </div>
-          <div class="how-to-element-right">
-            <p class="how-to-index">4.</p>
+          <p class="how-to-index">.3</p>
+        </div>
+      </div>
+      <div class="how-to-column">
+        <div class="how-to-element-right">
+          <p class="how-to-index">4.</p>
+          <div class="how-to-desc-right">
             <li>
-              <p>Unityプロジェクトのフォルダ<small>(Assetフォルダがある階層)</small>を参照します</p>
+              <p>Unityプロジェクトのフォルダ<br><small>(Assetフォルダがある階層)</small>を参照します</p>
               <div class="unity-screenshot">
-                <img alt="プロジェクトフォルダのスクリーンショット"
-                src="screenshots/where_unity.png" />
+                <img alt="プロジェクトフォルダのスクリーンショット" src="screenshots/where_unity.png" />
               </div>
               <label for="unity-folderpath">Unityフォルダ:</label>
               <span id="unity-folderpath"></span>
               <button onclick="selectUnityFolder()" class="round-button">参照</button>
             </li>
           </div>
-          <div class="how-to-element-left">
+        </div>
+      </div>
+      <div class="how-to-column">
+        <div class="how-to-element-left">
+          <div class="how-to-desc-left">
             <li>
               <p>実行ボタンでコピーを開始します</p>
               <button id="copy-button" onclick="executeCopy()" class="round-button">コピーを実行</button>
             </li>
-            <p class="how-to-index">.5</p>
           </div>
-        </ol>
+          <p class="how-to-index">.5</p>
+        </div>
       </div>
-    </main>
-    <script type="module" src="/main.js"></script>
-  </body>
+    </ol>
+  </main>
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
