--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       Assetsフォルダのあるzipファイルを解凍して<br>
       UnityプロジェクトのAssetフォルダに展開します
     </p>
-    <h2>操作方法</h2>
+    <h2>使い方</h2>
     <ol>
       <div class="how-to-column">
         <div class="how-to-element-left">
