--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
           <p class="how-to-index">2.</p>
           <div class="how-to-desc-right">
             <li>
-              <p><a href="#" id="google-drive-link">Googleドライブ</a>にアクセスして<br>
+              <p><a href="" id="google-drive-link" onclick="pushLink('google-drive-link')">Googleドライブ</a>にアクセスして<br>
                 <strong>Assetsフォルダ</strong>をダウンロードします。
               </p>
               <div class="gdrive-screenshot">
