urlをデフォルトブラウザでひらく

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,8 @@
             <p class="how-to-index">2.</p>
             <div class="how-to-desc-background">
               <div class="how-to-desc">
-                <p><a href="" id="google-drive-link" onclick="pushLink('google-drive-link')">Googleドライブ</a>にアクセスして
+                <p><a href="" id="google-drive-link"
+                    onclick="pushLink(event, 'google-drive-link')">Googleドライブ</a>にアクセスして
                   <strong>Assetsフォルダ</strong>をダウンロードします。
                 </p>
               </div>
